enable-more-W=1-warnings-by-default/llvm-17.0.0-rc2/x86_64-defconfig.log
/home/nathan/cbl/src/linux-next/lib/radix-tree.c:1136:50: error: parameter 'slot' set but not used [-Werror,-Wunused-but-set-parameter]
 1136 | void __rcu **radix_tree_iter_resume(void __rcu **slot,
      |                                                  ^
1 error generated.
make[5]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:243: lib/radix-tree.o] Error 1
/home/nathan/cbl/src/linux-next/net/ipv4/tcp_output.c:186:3: error: result of comparison of constant -1 with expression of type 'u8' (aka 'unsigned char') is always false [-Werror,-Wtautological-constant-out-of-range-compare]
  186 |                 NET_ADD_STATS(sock_net(sk), LINUX_MIB_TCPACKCOMPRESSED,
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  187 |                               tp->compressed_ack);
      |                               ~~~~~~~~~~~~~~~~~~~
/home/nathan/cbl/src/linux-next/include/net/ip.h:301:41: note: expanded from macro 'NET_ADD_STATS'
  301 | #define NET_ADD_STATS(net, field, adnd) SNMP_ADD_STATS((net)->mib.net_statistics, field, adnd)
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/nathan/cbl/src/linux-next/include/net/snmp.h:143:4: note: expanded from macro 'SNMP_ADD_STATS'
  143 |                         this_cpu_add(mib->mibs[field], addend)
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/nathan/cbl/src/linux-next/include/linux/percpu-defs.h:491:33: note: expanded from macro 'this_cpu_add'
  491 | #define this_cpu_add(pcp, val)          __pcpu_size_call(this_cpu_add_, pcp, val)
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
note: (skipping 1 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
<scratch space>:56:1: note: expanded from here
   56 | this_cpu_add_8
      | ^
/home/nathan/cbl/src/linux-next/arch/x86/include/asm/percpu.h:370:35: note: expanded from macro 'this_cpu_add_8'
  370 | #define this_cpu_add_8(pcp, val)                percpu_add_op(8, volatile, (pcp), val)
      |                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/nathan/cbl/src/linux-next/arch/x86/include/asm/percpu.h:127:31: note: expanded from macro 'percpu_add_op'
  127 |                               ((val) == 1 || (val) == -1)) ?            \
      |                                              ~~~~~ ^  ~~
1 error generated.
make[6]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:243: net/ipv4/tcp_output.o] Error 1
/home/nathan/cbl/src/linux-next/drivers/firmware/dmi-id.c:174:17: error: cast from 'void (*)(const void *)' to 'void (*)(struct device *)' converts to incompatible function type [-Werror,-Wcast-function-type-strict]
  174 |         .dev_release = (void(*)(struct device *)) kfree,
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[6]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:243: drivers/firmware/dmi-id.o] Error 1
/home/nathan/cbl/src/linux-next/arch/x86/kernel/paravirt.c:300:4: error: cast from 'void (*)(struct mmu_gather *, struct page *)' to 'void (*)(struct mmu_gather *, void *)' converts to incompatible function type [-Werror,-Wcast-function-type-strict]
  300 |                         (void (*)(struct mmu_gather *, void *))tlb_remove_page,
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[6]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:243: arch/x86/kernel/paravirt.o] Error 1
make[6]: Target 'net/ipv4/' not remade because of errors.
make[5]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: net/ipv4] Error 2
make[5]: Target 'net/' not remade because of errors.
make[4]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: net] Error 2
make[5]: Target 'lib/' not remade because of errors.
make[4]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: lib] Error 2
make[6]: Target 'arch/x86/kernel/' not remade because of errors.
make[5]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: arch/x86/kernel] Error 2
make[5]: Target 'arch/x86/' not remade because of errors.
make[4]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: arch/x86] Error 2
make[6]: Target 'drivers/firmware/' not remade because of errors.
make[5]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: drivers/firmware] Error 2
make[5]: Target 'drivers/' not remade because of errors.
make[4]: *** [/home/nathan/cbl/src/linux-next/scripts/Makefile.build:480: drivers] Error 2
make[4]: Target './' not remade because of errors.
make[3]: *** [/home/nathan/cbl/src/linux-next/Makefile:1943: .] Error 2
make[3]: Target 'all' not remade because of errors.
make[2]: *** [/home/nathan/cbl/src/linux-next/Makefile:359: __build_one_by_one] Error 2
make[2]: Target 'defconfig' not remade because of errors.
make[2]: Target 'all' not remade because of errors.
make[1]: *** [/home/nathan/cbl/src/linux-next/Makefile:234: __sub-make] Error 2
make[1]: Target 'defconfig' not remade because of errors.
make[1]: Target 'all' not remade because of errors.
make: *** [Makefile:234: __sub-make] Error 2
make: Target 'defconfig' not remade because of errors.
make: Target 'all' not remade because of errors.
